[package]
name = "plonky2_ecgfp5"
version = "0.1.0"
edition = "2021"
authors = ["Sebastien La Duca <sladuca777@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Sladuca/plonky2_ecgfp5"
categories = ["cryptography"]
description = "plonky2 gadgets for EcGFp5 curve and base field arithmetic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2_u32 = { git = "https://github.com/txaty/plonky2-u32.git" }
plonky2 = "0.2.0"
plonky2_field = "0.2.0"
plonky2_ecdsa = { git = "https://github.com/txaty/plonky2-ecdsa.git" }
num = "0.4"
itertools = "0.12.1"
serde = "1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[dev-dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
anyhow = "1.0.51"
criterion = "0.5.1"
log = "0.4"
env_logger = "0.11.3"

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "curve"
harness = false
